tester/src/test/aya/failure/patterns/issue355.aya.txt
In file $FILE:7:4 ->

  5 |  | suc Nat
  6 | 
  7 | def addN (a : I) : Nat
          ^--^
  
Error: Cannot perform pattern matching `left`
Tycking interrupted due to error(s).
What are you doing?
